# backend-showdown-2025

./: .dockerignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  docker-compose.yml  nginx.conf
client/: Cargo.toml  Dockerfile
client-full/src/: db.rs  main.rs
client/src/: cd_main.rs  lib.rs  main.rs
database/: Cargo.toml  Dockerfile
database/src/: connection.rs  db.rs  frame.rs  lib.rs  main.rs  parse.rs  server.rs
database/src/clients/: buffered_client.rs  client.rs  mod.rs
database/src/cmd/: get.rs  mod.rs  set.rs  unknown.rs
database/tests/: buffered_client.rs  client.rs  server.rs
src/: db.rs  inflight.rs  lib.rs  main.rs  worker.rs
